# rust-riot-wrappers

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  NEWS.md  README  README.md  README.rst  board.h  build.rs  cpu_conf.h  deny.toml  periph_conf.h  periph_cpu.h  riot-all.h  rustfmt.toml
.github/workflows/: buildtest.yml  git.yml  rustfmt.yml  test.yml
src/: adc.rs  async_helpers.rs  async_task.rs  async_wakers.rs  auto_init.rs  bluetil.rs  coap_handler.rs  coap_message.rs  dac.rs  delay.rs  error.rs  gcoap.rs  gnrc.rs  gnrc_pktbuf.rs  gnrc_util.rs  gpio.rs  helpers.rs  hwrng.rs  i2c.rs  impl_critical_section.rs  interrupt.rs  jnet_implementations.rs  led.rs  lib.rs  libc.rs  main.rs  main_module.rs  matter.rs  microbit.rs  msg.rs  mutex.rs  nanocoap_sock.rs  never.rs  panic.rs  prng.rs  pwm.rs  random.rs  raw.rs  rwlock.rs  saul.rs  (+15 more)
src/async_wakers/: counted.rs  debugging.rs  uncounted.rs
src/coap_handler/: mod.rs  v0_1.rs  v0_2.rs
src/coap_message/: impl_0_2.rs  impl_0_3.rs  mod.rs
src/gnrc/: icmpv6.rs  ipv6.rs  mod.rs  netapi.rs  netif.rs  netreg.rs  nib.rs  pktbuf.rs
src/gnrc/netreg/: callback.rs
src/gpio/: impl_0_2.rs  impl_1.rs  mod.rs
src/i2c/: impl_0_2.rs  impl_1.rs  mod.rs
src/msg/: mod.rs  v2.rs
src/nimble/: uuid.rs
src/saul/: mod.rs  registration.rs
src/shell/: args.rs  mod.rs
src/spi/: for_embedded_hal_1.rs  mod.rs
src/thread/: creation.rs  mod.rs  riot_c.rs  stack_stats.rs  tokenparts.rs
src/thread/riot_c/: creation.rs
src/uart/: mod.rs
src/ztimer/: mod.rs  periodic.rs
tests/: README.md
tests/.cargo/: config.toml
tests/adc/: Cargo.toml  Makefile
tests/adc/src/: lib.rs
tests/auto-init/: Cargo.toml  Makefile
tests/auto-init-debug/: Cargo.toml  Makefile  src
tests/auto-init-debug/tests/: 01-run.py
tests/auto-init/src/: lib.rs
tests/auto-init/tests/: 01-run.py
tests/dac/: Cargo.toml  Makefile
tests/dac/src/: lib.rs
tests/gnrc-embedded-nal-udp/: Cargo.toml  Makefile
tests/gnrc-embedded-nal-udp/src/: lib.rs
tests/gnrc-pktbuf/: Cargo.toml  Makefile
tests/gnrc-pktbuf/src/: lib.rs
tests/gnrc-pktbuf/tests/: 01-run.py
tests/gpio/: Cargo.toml  Makefile
tests/gpio/src/: lib.rs
tests/i2c/: Cargo.toml  Makefile
tests/i2c/src/: lib.rs
tests/led/: Cargo.toml  Makefile
tests/led/src/: lib.rs
tests/led/tests/: 01-run.py
tests/mutex/: Cargo.toml  Makefile
tests/mutex/src/: lib.rs
tests/mutex/tests/: 01-run.py
tests/network-properties/: Cargo.toml  Makefile
tests/network-properties/src/: lib.rs
tests/network-properties/tests/: 01-run.py
tests/pwm/: Cargo.toml  Makefile
tests/pwm/src/: lib.rs
tests/random/: Cargo.toml  Makefile
tests/random/src/: lib.rs
tests/random/tests/: 01-run.py
tests/shell/: Cargo.toml  Makefile
tests/shell/src/: lib.rs
tests/shell/tests/: 01-run.py
tests/spi/: Cargo.toml  Makefile
tests/spi/src/: lib.rs
tests/uart/: Cargo.toml  Makefile
tests/uart/src/: lib.rs
tests/ztimer/: Cargo.toml  Makefile
tests/ztimer-async/: Cargo.toml  Makefile
tests/ztimer-async/src/: lib.rs
tests/ztimer-async/tests/: 01-run.py
tests/ztimer/src/: lib.rs
tests/ztimer/tests/: 01-run.py
