[package]
name = "riot-wrappers-test-spi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
riot-wrappers = { path = "../..", features = [ "set_panic_handler", "panic_handler_format" ] }
embedded-hal = "1"
embedded-hal-bus = "0.2.0"
