[package]
name = "riot-wrappers-test-spi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
# critical-section: We don't *use* this, but the embedded-hal-bus crate also contains variants that rely on critical sections, so we have to enable it.
riot-wrappers = { path = "../..", features = [ "set_panic_handler", "panic_handler_format", "provide_critical_section_1_0" ] }
embedded-hal = "1"
embedded-hal-bus = "0.2.0"

# Actually this is only required on samr21 and other non-atomic platforms to
# make the static_cell work, but for sake of setup simplicity we'll keep this
# enabled everywhere. (A better solution would be to have the RIOT build system
# managed crates provide this dependency on platforms where it is needed).
portable-atomic = { version = "1.6", default-features = false, features = [ "critical-section" ] }
