[package]
name = "riot-wrappers-test-uart"
version = "0.1.0"
authors = ["Kilian Barning <barning@uni-bremen.de>"]
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
riot-wrappers = { path = "../..", features = [ "set_panic_handler", "panic_handler_format" ] }
riot-sys = "*"
embedded-hal = "0.2.4"
