[package]
name = "riot-wrappers-test-ztimer-async"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
riot-wrappers = { path = "../..", features = [ "set_panic_handler", "panic_handler_format", "embedded-hal-async", "provide_critical_section_1_0" ] }
embassy-executor-riot = { git = "https://gitlab.com/etonomy/riot-module-examples" }
embassy-executor = "0.5.0" # Not enabling any of its executors: there's the -riot for that
static_cell = "2"

# Actually this is only required on samr21 and other non-atomic platforms to
# make the static_cell work, but for sake of setup simplicity we'll keep this
# enabled everywhere. (A better solution would be to have the RIOT build system
# managed crates provide this dependency on platforms where it is needed).
portable-atomic = { version = "1.6", default-features = false, features = [ "critical-section" ] }
